added box-shadow and border radius to cards

--- a/assets/css/crypto_app.css
+++ b/assets/css/crypto_app.css
@@ -14,6 +14,8 @@
 .coin{
     margin: 20px;
     background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .upper{
