--- a/assets/css/shell_game.css
+++ b/assets/css/shell_game.css
@@ -1,43 +1,39 @@
 body {
-    margin: 0;
+    margin:0;
+    padding:0;
 }
-#canvas {
-    position: relative;
-}
-#canvas-top, #heading, #button, #button_q, #gif, #score, #highest, #button_r, #level {
-    position: absolute;
-}
+
 label {
     color: brown;
     font-weight: bold;
     font-size: 20px;
 }
-#level {
-    top: 450px;
-    right: 50px;
-    visibility: visible;
-}
+
 #score {
-    top: 20px;
-    left: 90px;
+    margin:10px;
+    float:left;
 }
 #highest {
-    top: 20px;
-    right: 90px;
+    margin:10px;
+    float:right;
 }
 #gif {
-    top: 250px;
     left: 450px;
-    visibility: visible;
+    display: block;
+    margin:auto;
+    align-items: center;
+    justify-content: center;
+    margin-top:50px;
 }
 #canvas-top {
-    visibility: hidden;
+    display:none;
+    
 }
 #heading {
     font-size: 60px;
-    top: 100px;
+    
     left: 20%;
-    visibility: visible;
+    display: block;
 }
 #button {
     background-color: green;
@@ -46,9 +42,9 @@ label {
     font-size: 18px;
     border-radius: 10px;
     color: white;
-    visibility: visible;
-    top: 700px;
-    left: 49%;
+    display:block;
+    margin:10px;
+    
 }
 #button_r{
     background-color: violet;
@@ -57,9 +53,9 @@ label {
     font-size: 18px;
     border-radius: 10px;
     color: white;
-    visibility: visible;
-    top: 790px;
-    left: 49%;
+    display:block;
+    
+    
 }
 #button_q {
     background-color: red;
@@ -68,7 +64,20 @@ label {
     font-size: 18px;
     border-radius: 10px;
     color: white;
-    visibility: hidden;
-    top: 700px;
-    left: 49%;
+    display:none;
+    
+    
+}
+.game_center{
+    width:100%;
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
+    margin-top:100px;
+}
+.buttons{
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
