--- a/assets/css/Speed_Typer.css
+++ b/assets/css/Speed_Typer.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #2c3e50;
+  background-color: #00A4CCFF;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,7 +59,7 @@ button:focus {
 }
 
 .container {
-  background-color: #34495e;
+  background-color: #FF6F61;
   padding: 20px;
   border-radius: 4px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
